5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/225/users/4470/executions/1838_1274.log
== SUBMITION (2019-06-26 09:58:06) 
-- CODE:
from numpy import*
m = array(eval(input("M:")), dtype=int)

v = zeros(shape(m)[0], dtype=int)
for i in range(shape(m)[0]):
	v[i]= sum(m[i,:])
print(v)
-- EXECUTION TIME:
1.05694
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1838/1274/main.py", line 4, in <module>
    v = zeros(shape(m)[0], dtype=int)
IndexError: tuple index out of range

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-06-26 09:58:22) 
-- CODE:
from numpy import*
m = array(eval(input("M:")), dtype=int)

v = zeros(shape(m)[0], dtype=int)
for i in range(shape(m)[0]):
	v[i]= sum(m[i,:])
print(v)
-- EXECUTION TIME:
1.07844
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1838/1274/main.py", line 4, in <module>
    v = zeros(shape(m)[0], dtype=int)
IndexError: tuple index out of range

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-06-26 09:58:29) 
-- CODE:
from numpy import*
m = array(eval(input("M:")), dtype=int)

v = zeros(shape(m)[0], dtype=int)
for i in range(shape(m)[0]):
	v[i]= sum(m[i,:])
print(v)
-- EXECUTION TIME:
2.24671
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1838/1274/main.py", line 4, in <module>
    v = zeros(shape(m)[0], dtype=int)
IndexError: tuple index out of range

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-06-26 09:58:31) 
-- CODE:
from numpy import*
m = array(eval(input("M:")), dtype=int)

v = zeros(shape(m)[0], dtype=int)
for i in range(shape(m)[0]):
	v[i]= sum(m[i,:])
print(v)
-- EXECUTION TIME:
6.39389
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1838/1274/main.py", line 4, in <module>
    v = zeros(shape(m)[0], dtype=int)
IndexError: tuple index out of range

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-06-26 09:58:32) 
-- CODE:
from numpy import*
m = array(eval(input("M:")), dtype=int)

v = zeros(shape(m)[0], dtype=int)
for i in range(shape(m)[0]):
	v[i]= sum(m[i,:])
print(v)
-- EXECUTION TIME:
8.32771
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1838/1274/main.py", line 4, in <module>
    v = zeros(shape(m)[0], dtype=int)
IndexError: tuple index out of range

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-06-26 09:58:34) 
-- CODE:
from numpy import*
m = array(eval(input("M:")), dtype=int)

v = zeros(shape(m)[0], dtype=int)
for i in range(shape(m)[0]):
	v[i]= sum(m[i,:])
print(v)
-- EXECUTION TIME:
8.70438
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1838/1274/main.py", line 4, in <module>
    v = zeros(shape(m)[0], dtype=int)
IndexError: tuple index out of range

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-06-26 09:58:35) 
-- CODE:
from numpy import*
m = array(eval(input("M:")), dtype=int)

v = zeros(shape(m)[0], dtype=int)
for i in range(shape(m)[0]):
	v[i]= sum(m[i,:])
print(v)
-- EXECUTION TIME:
8.11103
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1838/1274/main.py", line 4, in <module>
    v = zeros(shape(m)[0], dtype=int)
IndexError: tuple index out of range

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-06-26 09:58:42) 
-- CODE:
from numpy import*
m = array(eval(input("M:")), dtype=int)

v = zeros(shape(m)[0], dtype=int)
for i in range(shape(m)[0]):
	v[i]= sum(m[i,:])
print(v)
-- EXECUTION TIME:
5.06496
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1838/1274/main.py", line 4, in <module>
    v = zeros(shape(m)[0], dtype=int)
IndexError: tuple index out of range

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-06-26 09:58:50) 
-- CODE:
from numpy import*
m = array(eval(input("M:")), dtype=int)

v = zeros(shape(m)[0], dtype=int)
for i in range(shape(m)[0]):
	v[i]= sum(m[i,:])
print(v)
-- EXECUTION TIME:
8.40443
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1838/1274/main.py", line 4, in <module>
    v = zeros(shape(m)[0], dtype=int)
IndexError: tuple index out of range

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-06-26 09:58:50) 
-- CODE:
from numpy import*
m = array(eval(input("M:")), dtype=int)

v = zeros(shape(m)[0], dtype=int)
for i in range(shape(m)[0]):
	v[i]= sum(m[i,:])
print(v)
-- EXECUTION TIME:
7.41937
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1838/1274/main.py", line 4, in <module>
    v = zeros(shape(m)[0], dtype=int)
IndexError: tuple index out of range

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-06-26 09:58:52) 
-- CODE:
from numpy import*
m = array(eval(input("M:")), dtype=int)

v = zeros(shape(m)[0], dtype=int)
for i in range(shape(m)[0]):
	v[i]= sum(m[i,:])
print(v)
-- EXECUTION TIME:
7.58634
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1838/1274/main.py", line 4, in <module>
    v = zeros(shape(m)[0], dtype=int)
IndexError: tuple index out of range

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-06-26 09:58:53) 
-- CODE:
from numpy import*
m = array(eval(input("M:")), dtype=int)

v = zeros(shape(m)[0], dtype=int)
for i in range(shape(m)[0]):
	v[i]= sum(m[i,:])
print(v)
-- EXECUTION TIME:
6.27273
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1838/1274/main.py", line 4, in <module>
    v = zeros(shape(m)[0], dtype=int)
IndexError: tuple index out of range

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-06-26 09:58:54) 
-- CODE:
from numpy import*
m = array(eval(input("M:")), dtype=int)

v = zeros(shape(m)[0], dtype=int)
for i in range(shape(m)[0]):
	v[i]= sum(m[i,:])
print(v)
-- EXECUTION TIME:
6.47752
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1838/1274/main.py", line 4, in <module>
    v = zeros(shape(m)[0], dtype=int)
IndexError: tuple index out of range

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-06-26 09:59:01) 
-- CODE:
from numpy import*
m = array(eval(input("M:")), dtype=int)

v = zeros(shape(m)[0], dtype=int)
for i in range(shape(m)[0]):
	v[i]= sum(m[i,:])
print(v)
-- EXECUTION TIME:
6.26603
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1838/1274/main.py", line 4, in <module>
    v = zeros(shape(m)[0], dtype=int)
IndexError: tuple index out of range

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-06-26 09:59:09) 
-- CODE:
from numpy import*
m = array(eval(input("M:")), dtype=int)

v = zeros(shape(m)[0], dtype=int)
for i in range(shape(m)[0]):
	v[i]= sum(m[i,:])
print(v)
-- EXECUTION TIME:
6.03007
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1838/1274/main.py", line 4, in <module>
    v = zeros(shape(m)[0], dtype=int)
IndexError: tuple index out of range

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-06-26 09:59:10) 
-- CODE:
from numpy import*
m = array(eval(input("M:")), dtype=int)

v = zeros(shape(m)[0], dtype=int)
for i in range(shape(m)[0]):
	v[i]= sum(m[i,:])
print(v)
-- EXECUTION TIME:
6.37545
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1838/1274/main.py", line 4, in <module>
    v = zeros(shape(m)[0], dtype=int)
IndexError: tuple index out of range

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-06-26 09:59:11) 
-- CODE:
from numpy import*
m = array(eval(input("M:")), dtype=int)

v = zeros(shape(m)[0], dtype=int)
for i in range(shape(m)[0]):
	v[i]= sum(m[i,:])
print(v)
-- EXECUTION TIME:
6.33142
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1838/1274/main.py", line 4, in <module>
    v = zeros(shape(m)[0], dtype=int)
IndexError: tuple index out of range

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-06-26 09:59:12) 
-- CODE:
from numpy import*
m = array(eval(input("M:")), dtype=int)

v = zeros(shape(m)[0], dtype=int)
for i in range(shape(m)[0]):
	v[i]= sum(m[i,:])
print(v)
-- EXECUTION TIME:
6.7072
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1838/1274/main.py", line 4, in <module>
    v = zeros(shape(m)[0], dtype=int)
IndexError: tuple index out of range

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-06-26 09:59:13) 
-- CODE:
from numpy import*
m = array(eval(input("M:")), dtype=int)

v = zeros(shape(m)[0], dtype=int)
for i in range(shape(m)[0]):
	v[i]= sum(m[i,:])
print(v)
-- EXECUTION TIME:
6.39544
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1838/1274/main.py", line 4, in <module>
    v = zeros(shape(m)[0], dtype=int)
IndexError: tuple index out of range

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-26 10:02:08) 
-- CODE:
from numpy import*
m = array(eval(input("M:")), dtype=int)
v = zeros(shape(m)[0], dtype=int)
	for i in range(shape(m)[0]):
		v[i]= sum(m[i,:])
print(v)
-- ERROR:
File "XXXX", line 4
    for i in range(shape(m)[0]):
    ^
IndentationError: unexpected indent
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-26 10:02:12) 
-- CODE:
from numpy import*
m = array(eval(input("M:")), dtype=int)
v = zeros(shape(m)[0], dtype=int)
	for i in range(shape(m)[0]):
		v[i]= sum(m[i,:])
print(v)
-- ERROR:
File "XXXX", line 4
    for i in range(shape(m)[0]):
    ^
IndentationError: unexpected indent
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-06-26 10:02:16) 
-- CODE:
from numpy import*
m = array(eval(input("M:")), dtype=int)
v = zeros(shape(m)[0], dtype=int)
	for i in range(shape(m)[0]):
		v[i]= sum(m[i,:])
print(v)
-- EXECUTION TIME:
4.81336
-- ERROR:
  File "/home/codebench/codes/1838/1274/main.py", line 4
    for i in range(shape(m)[0]):
    ^
IndentationError: unexpected indent

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-06-26 10:02:16) 
-- CODE:
from numpy import*
m = array(eval(input("M:")), dtype=int)
v = zeros(shape(m)[0], dtype=int)
	for i in range(shape(m)[0]):
		v[i]= sum(m[i,:])
print(v)
-- EXECUTION TIME:
3.94682
-- ERROR:
  File "/home/codebench/codes/1838/1274/main.py", line 4
    for i in range(shape(m)[0]):
    ^
IndentationError: unexpected indent

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-06-26 10:02:16) 
-- CODE:
from numpy import*
m = array(eval(input("M:")), dtype=int)
v = zeros(shape(m)[0], dtype=int)
	for i in range(shape(m)[0]):
		v[i]= sum(m[i,:])
print(v)
-- EXECUTION TIME:
2.80567
-- ERROR:
  File "/home/codebench/codes/1838/1274/main.py", line 4
    for i in range(shape(m)[0]):
    ^
IndentationError: unexpected indent

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-06-26 10:02:16) 
-- CODE:
from numpy import*
m = array(eval(input("M:")), dtype=int)
v = zeros(shape(m)[0], dtype=int)
	for i in range(shape(m)[0]):
		v[i]= sum(m[i,:])
print(v)
-- EXECUTION TIME:
2.53929
-- ERROR:
  File "/home/codebench/codes/1838/1274/main.py", line 4
    for i in range(shape(m)[0]):
    ^
IndentationError: unexpected indent

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-06-26 10:02:17) 
-- CODE:
from numpy import*
m = array(eval(input("M:")), dtype=int)
v = zeros(shape(m)[0], dtype=int)
	for i in range(shape(m)[0]):
		v[i]= sum(m[i,:])
print(v)
-- EXECUTION TIME:
3.62933
-- ERROR:
  File "/home/codebench/codes/1838/1274/main.py", line 4
    for i in range(shape(m)[0]):
    ^
IndentationError: unexpected indent

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-26 10:15:23) 
-- CODE:
from numpy import*
n=int(input())
m=ones((n, n), dtype=int)
j=1
k=2
for i in range(1,n):
	while(j<n):
		m[i, j]=i+1
		j=j+1
	j=k
	k=k+1
i=1
k=2
for j in range(1, n):
	while(i<n):
		m[i, j]=j+1
		i=i+1
	i=k
	k=k+1
print(m)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-26 10:16:58) 
-- CODE:
from numpy import*
n=int(input())
m=ones((n, n), dtype=int)
j=1
k=2
for i in range(1,n):
	while(j<n):
		m[i, j]=i+1
		j=j+1
	j=k
	k=k+1
i=1
k=2
for j in range(1, n):
	while(i<n):
		m[i, j]=j+1
		i=i+1
	i=k
	k=k+1
print(m)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-26 10:19:50) 
-- CODE:
from numpy import*
n=int(input())
m=ones((n, n), dtype=int)
j=1
k=2
for i in range(1,n):
	while(j<n):
		m[i, j]=i+1
		j=j+1
	j=k
	k=k+1
i=1
k=2
for j in range(1, n):
	while(i<n):
		m[i, j]=j+1
		i=i+1
	i=k
	k=k+1
print(m)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-06-26 10:19:53) 
-- CODE:
from numpy import*
n=int(input())
m=ones((n, n), dtype=int)
j=1
k=2
for i in range(1,n):
	while(j<n):
		m[i, j]=i+1
		j=j+1
	j=k
	k=k+1
i=1
k=2
for j in range(1, n):
	while(i<n):
		m[i, j]=j+1
		i=i+1
	i=k
	k=k+1
print(m)
-- EXECUTION TIME:
1.04681
-- TEST CASE 1:
---- input:
3
---- correct output:
[[1 1 1]
 [1 2 2]
 [1 2 3]]
---- user output:
[[1 1 1]
 [1 2 2]
 [1 2 3]]
-- TEST CASE 2:
---- input:
8
---- correct output:
[[1 1 1 1 1 1 1 1]
 [1 2 2 2 2 2 2 2]
 [1 2 3 3 3 3 3 3]
 [1 2 3 4 4 4 4 4]
 [1 2 3 4 5 5 5 5]
 [1 2 3 4 5 6 6 6]
 [1 2 3 4 5 6 7 7]
 [1 2 3 4 5 6 7 8]]
---- user output:
[[1 1 1 1 1 1 1 1]
 [1 2 2 2 2 2 2 2]
 [1 2 3 3 3 3 3 3]
 [1 2 3 4 4 4 4 4]
 [1 2 3 4 5 5 5 5]
 [1 2 3 4 5 6 6 6]
 [1 2 3 4 5 6 7 7]
 [1 2 3 4 5 6 7 8]]
-- TEST CASE 3:
---- input:
1
---- correct output:
[[1]]
---- user output:
[[1]]
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
